--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "(cd ./node_modules/reveal.js && npm install && grunt --force)"
   },
-  "author": "Edgar Holzke",
+  "author": {
+    "name": "Edgar Holzke",
+    "email": "xantilon@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:xantilon/pandoc-slides.git"
+  },
+  
   "license": "ISC"
 }
